# hackmatch_ai

./: .gitignore  README.md
lcbbs-capture-cpp/: CMakeLists.txt  buffer_control.cu  image_construct.py  main.cpp  main.hpp  mem_helpers.hpp  pch.h  server.cpp  server.hpp  shared.hpp
lcbbs_hyperv_socket/linux/: Makefile  af_hyperv_client.cpp
lcbbs_hyperv_socket/windows/: CMakeLists.txt  af_hyperv_server.cpp
neural_network/: environment.py  hack_match_ai.py  img_disp.py  interact.py  video_realtime.py
neural_network/checkpoint/: checkpoint  ckpt-1.index  ckpt-2.index  ckpt-21.index  ckpt-22.index  ckpt-42.index  ckpt-62.index  ckpt-63.index  ckpt-64.index  ckpt-84.index
